fixed annotation list item styling and added truncation to annotation cards in detail container

--- a/src/App.css
+++ b/src/App.css
@@ -427,31 +427,42 @@ button:hover{
   margin: 2.5rem;
   padding: 1.5rem;
   width: 90%;
+  max-height: 10%;
   border-style: solid;
   border-width: 1px;
   /* border-color: #C8C8C8; GRAY*/
   border-color: #6f65e9;
 
   display:flex;
-  justify-content: center;
-  vertical-align: middle;
+  /* justify-content: center;
+  vertical-align: middle; */
 }
   .div--annotation-list-item img{
-    width: 70%;
+    /* width: 70%; */
+    width: 100%;
+    height: 100%;
+    float: left;
   }
 
   .div--annotation-list-item-left{
-    margin: 1rem;
+    /* margin: 1rem;
     margin-left: auto; /*YOU SOHULD PROBABLY DELETE THIS? */
+    margin: 1rem;
+    max-width: 60%;
   }
 
   .div--annotation-list-item-right{
     margin: 1rem;
-    max-width: 40%;
+    /* max-width: 40%; */
   }
 
   .annotation-list-item-title{
     font-size: 2.75rem;
+    margin-top: -1rem;
+  }
+
+  .h4-annotation-list-item-title {
+    font-size: 2rem;
     margin-top: -1rem;
   }
 
